main.css
@import url("https://fonts.googleapis.com/css?family=Varela+Round");

html {
    /*    box-sizing: border-box;*/
    scroll-behavior: smooth;
}

*,
*:before,
*:after {
    box-sizing: inherit;
    padding: 0;
    margin: 0;
    letter-spacing: 1.1px;
}

@media (max-width: 414px) {
    .menu {
        padding-left: 10px;
    }
}

body,
html {
    margin: 0;
    min-height: 100vh;
    background: #1c1d22;
    font-family: Courier New;
    font-weight: normal!important;
}

nav {
    position: fixed;
    width: 100%;
    background-color: rgba(28,29,34, 0.5);
    text-align: center;
}

.menu {
    display: inline-flex;
    list-style: none;
    z-index: 10;
}

.menu li {
    padding-top: 15px;
    width: 125px;
    height: 50px;
    transition: background-position-x 0.9s linear;
    text-align: center;
    color: #1c1d22!important;
}

a {
    font-size: 22px;
    color: seashell;
    text-decoration: none;
    transition: all 0.45s;
}

.menu li:hover,
.menu li:active {
    background: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB2ZXJzaW9uPSIxLjEi%0D%0AIGlkPSJMYXllcl8xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhs%0D%0AaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIKCSB3aWR0%0D%0AaD0iMzkwcHgiIGhlaWdodD0iNTBweCIgdmlld0JveD0iMCAwIDM5MCA1MCIgZW5hYmxlLWJhY2tn%0D%0Acm91bmQ9Im5ldyAwIDAgMzkwIDUwIiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHBhdGggZmlsbD0i%0D%0Abm9uZSIgc3Ryb2tlPSIjZDk0ZjVjIiBzdHJva2Utd2lkdGg9IjEuNSIgc3Ryb2tlLW1pdGVybGlt%0D%0AaXQ9IjEwIiBkPSJNMCw0Ny41ODVjMCwwLDk3LjUsMCwxMzAsMAoJYzEzLjc1LDAsMjguNzQtMzgu%0D%0ANzc4LDQ2LjE2OC0xOS40MTZDMTkyLjY2OSw0Ni41LDI0My42MDMsNDcuNTg1LDI2MCw0Ny41ODVj%0D%0AMzEuODIxLDAsMTMwLDAsMTMwLDAiLz4KPC9zdmc+Cg==");
    animation: line 1.5s;
}

.menu li:hover a,
.menu li:active a {
    color: #d94f5c;
    text-shadow: 1px 1px 2px seashell, 0 0 25px #d94f5c, 0 0 5px #d94f5c;
}

li a:not(:last-child) {
    margin-right: 30px;
}

@keyframes line {
    0% {
        background-position-x: 490px;
    }
}

.gallery {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
    -webkit-column-width: 300px;
    -moz-column-width: 300px;
    column-width: 300px;
    -webkit-column-gap: 2%;
    -moz-column-gap: 5%;
    /*    overflow: hidden;*/
    max-width: 80%;
    margin: 0 auto;
    /*    min-height: 100vh;*/
    margin-bottom: 50px;
}

.gallery img {
    display: block;
    margin: auto;
    max-width: 100%;
    cursor: pointer;
    margin-bottom: 10px;
}

.gallery img:hover,
.gallery img:active {
    opacity: 0.5;
    transition: 0.3s;
    /*    display words*/
}

.container h1 {
    text-shadow: 1px 1px 2px black, 0 0 25px #7affe9, 0 0 5px #7affe9;
    width: 100%;
    margin: auto;
    text-align: center;
    font-weight: normal;
}

/* The Modal (background) */
.modal {
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Stay in place */
    z-index: 1;
    /* Sit on top */
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    overflow: auto;
    /* Enable scroll if needed */
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.9);
    /* Black w/ opacity */
}

/* Modal Content (Image) */
.modal-content {
    margin: auto;
    display: block;
    max-height: 60%;
    max-width: 80%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: absolute;
}

/* Caption of Modal Image (Image Text) - Same Width as the Image */
#caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}

/* Add Animation - Zoom in the Modal */
.modal-content,
#caption {
    animation-name: zoom;
    animation-duration: 0.6s;
}

@keyframes zoom {
    from {
        transform: scale(0)
    }

    to {
        transform: scale(1)
    }
}

/* The Close Button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px) {
    .modal-content {
        width: 100%;
    }
}

.statement p {
    color: white;
    margin: center;
    text-align: center;
}

.about {
    position: relative;
    margin: auto;
    min-height: 85vh;
    z-index: 10;
}

#juju {
    max-width: 200px;
    border-radius: 50%;
    margin-top: 100px;
    margin-bottom: 70px;
}

.name {
    max-width: 100%;
    font-size: 300%;
    color: white;
    text-shadow: 1px 1px 2px black, 0 0 25px #7affe9, 0 0 5px #7affe9;
    align-items: center;
    text-align: center;
    margin: auto;
/*
    transform: translate(0%, 50%);
    -webkit-transform: translate(0%, 50%);
    -ms-transform: translate(0%, 50%);
*/
}

#intro {
    text-align: justify;
}

.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    max-width: 600px;
    margin: auto;
/*    opacity: 0;*/
    transition: .5s ease;
}

.text {
    color: white;
    font-size: 225%;
    text-align: center;
    position: absolute;
    top: 55%;
/*    left: 50%;*/
/*
    -webkit-transform: translate(-50%, -55%);
    -ms-transform: translate(-50%, -55%);
    transform: translate(-50%, -55%);
*/
    /*    text-align: center;*/
    text-shadow: 1px 1px 3px black;
    min-width: 300px;
}


.me {
/*    display: table-cell;*/
    vertical-align: middle;
    text-align: center;
    margin: auto;
/*    box-shadow: 0px 0px 30px #7affe9, 0px 0px 5px white;*/
    width: 100%;
/*
    width: 80%;
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -65%);
    -webkit-transform: translate(-50%, -65%);
    -ms-transform: translate(-50%, -65%);
*/
}

.footer {
    text-align: center;
    /*    position: fixed;*/
    padding-top: 20px;
    left: 0;
    bottom: 0;
    width: 100%;
    /*        transform: translate(0%, -10%);*/
    /*    background: #1c1d22 ;*/
}

.content {
    text-align: center;
    color: #777;
}

.social {
    margin: 0 10px;
    display: inline-block;
    padding: 5px;
    font-size: 30px;
    width: 40px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
    background: #777;
    overflow: hidden;
    transition: color .3s;
}

.social a {
    color: #1c1d22;
}

.social:hover,
.social:active {
    background: #d94f5c;
    cursor: pointer;
    box-shadow: 0px 0px 30px #d94f5c, 0px 0px 5px #d94f5c;
}

.social:hover a,
.social:active a {
    color: white;
    text-shadow: 1px 1px 2px black, 0 0 5px white;
}

.project {
    max-width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.project > .work {
    box-shadow: 0px 0px 30px #7affe9, 0px 0px 5px white;
    padding: 10px;
    cursor: pointer;
    display: block;
    margin: 10px;
    max-width: 100%;
    /*min-width: 300px;*/
    cursor: pointer;
    z-index: 10;
    min-height: 450px;
    max-width: 350px;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
}

.work img {
    margin: auto;
    width: 100%;
}

.project h3 {
    color: white;
    font-size: 20px;
    display: inline-block;
}

.project p {
    color: white;
    font-size: 15px;
}

.pitch {
    margin: auto;
    color: white;
    vertical-align: middle;
    text-align: center;
    width: 80%;
    max-width: 600px;
}

.pitch h1 {
    text-shadow: 1px 1px 2px black, 0 0 25px #7affe9, 0 0 5px #7affe9;
    font-weight: normal;
}

.portfolio {
    margin: auto;
    color: white;
    vertical-align: middle;
    text-align: center;
    width: 80%;
}

.tab {
    margin-top: 100px;
    display: inline-block;
}

/* Style the buttons that are used to open the tab content */
.tab button {
    margin: 0 10px;
    background-color: inherit;
    color: white;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    min-width: 30px;
}

/* Change background color of buttons on hover */
.tab button:hover {
    box-shadow: 0px 0px 30px #7affe9, 0px 0px 5px white;
    border-radius: 10px;
}

/* Create an active/current tablink class */
.tab button.active {
    box-shadow: 0px 0px 30px #7affe9, 0px 0px 5px white;
    border-radius: 10px;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
}

.tabcontent {
    animation: fadeEffect 1s;
    /* Fading effect takes 1 second */
}

/* Go from zero to full opacity */
@keyframes fadeEffect {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

